# regulated_pure_pursuit_controller

./: CMakeLists.txt  README.md  package.xml  regulated_pure_pursuit_controller_plugin.xml
cfg/: RegulatedPurePursuitController.cfg
include/regulated_pure_pursuit_controller/: regulated_pure_pursuit_controller.h
src/: regulated_pure_pursuit_controller.cpp
