<?xml version="1.0"?>
<package format="2">
  <name>regulated_pure_pursuit_controller</name>
  <version>1.0.0</version>
  <description>Local planner plugin implementing Regulated Pure Pursuit</description>

  <maintainer email="mitukou1109@gmail.com">Mitsuhiro Sakamoto</maintainer>

  <license>BSD</license>

  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <nav_core plugin="${prefix}/regulated_pure_pursuit_controller_plugin.xml" />
  </export>
</package>